# peer_locator_apps

./: Cargo.toml  README.md  cbindgen.toml
android_app/: .gitignore  build.gradle
android_app/app/: build.gradle
android_app/gradle/wrapper/: gradle-wrapper.properties
ios_app/: .gitignore  Rust-Bridging-Header.h  build-rust-xcode.sh  matchApp.swift  ploc.entitlements
ios_app/core/: Core.swift  mobileapp-ios.h
ios_app/ios_app/: AppDelegate.swift  Globals.swift  Info.plist  RootWireFrame.swift
ios_app/ios_app.xcodeproj/: project.pbxproj
ios_app/ios_app/ble/: BleCentral.swift  BleCentralDelegate.swift  BleDelegatesRegisterer.swift  BleManager.swift  BlePeripheral.swift  BlePeripheralDelegate.swift  BleRestarterWhenAppComesToFg.swift  BleStateObservable.swift  BleTrafficUIErrorDisplayer.swift  BleUuids.swift  SimulatorBleManager.swift
ios_app/ios_app/common/: BackendSession.swift  Peer.swift  ServicesError.swift  Session.swift  SessionId.swift  SharedSessionData.swift  structs.swift
ios_app/ios_app/logs/: Log.swift  (+3 more)
ios_app/ios_appTests/: BleDeviceValidatorServiceTests.swift  DetectedBleDeviceFilterServiceTests.swift  ios_appTests.swift
ios_app/ploc_watch/: Info.plist
ios_app/ploc_watch Extension/: ComplicationController.swift  ContentView.swift  ContentViewModel.swift  Dependencies.swift  Info.plist  NotificationController.swift  NotificationView.swift  PhoneBridge.swift  SessionDataDispatcher.swift  ios_appApp.swift
ios_app/ploc_widget/: Info.plist  ploc_widget.swift
src/: ffi_android.rs  ffi_ios.rs  globals.rs  lib.rs  logger.rs  networking.rs
(+211 files in other folders)
